--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,15 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@core/*": ["src/app/core/*"],
+      "@models": ["src/app/shared/models"],
+      "@services": ["src/app/shared/services"],
+      "@utils": ["src/app/shared/utils"],
+      "@enums": ["src/app/shared/enums"],
+      "@guards": ["src/app/shared/guards"],
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
